syntax = "proto3";
package com.github.cnosdb.cnosdb.pkg.storage;
option go_package = ".;storage";

message ReadSource {
  // Database identifies which database to query.
  string database = 1;

  // RetentionPolicy identifies which retention policy to query.
  string RetentionPolicy = 2;
}
